Transition to Java 17.